--- a/mutual.css
+++ b/mutual.css
@@ -21,3 +21,22 @@ h2 {
   font-family: helvetica_bold;
 }
 
+* {
+  all: unset;
+  display: revert;
+  cursor: revert;
+  /*overstående nustiller alle HTML regler for H1, h2 mm.*/
+}
+
+html {
+  /* farve variabler */
+  --blue: #1b8fad;
+  --orange: #ce6433;
+
+  /* gap variabler */
+  --space-xs: 1rem;
+  --space-s: 2rem;
+  --space-m: 3rem;
+  --space-l: 4rem;
+  --space-xl: 5rem;
+}
