--- a/destination.css
+++ b/destination.css
@@ -1,16 +1,29 @@
-header nav {
+header {
+  display: flex;
+}
+
+body {
+  margin: 0;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+.filtre_buttons {
   display: flex;
   justify-content: center;
-  margin-top: 4rem;
+  margin-top: var(--space-m);
 }
 
 .filteroverskrift {
   display: none;
+  font-size: var(--space-xs);
 }
 button {
   color: var(--blue);
   font-family: helvetica_medium;
-  font-size: 1rem;
+  font-size: var(--space-xs);
 
   border: none;
   background-color: transparent;
@@ -36,6 +49,7 @@ article {
   border: #c7c7c7 1px solid;
   box-shadow: 6px 8px 10px #c7c7c7;
   border-bottom: 2px solid var(--blue);
+  display: grid;
 }
 
 /*PAKKEINDHOLD*/
@@ -59,21 +73,20 @@ img {
 }
 
 li {
-  margin-left: var(--space-xl);
   line-height: var(--space-s);
 }
 
 .pris {
   display: flex;
   justify-content: center;
-  margin-block: var(--space-s);
+  margin-top: var(--space-s);
   font-weight: bolder;
 }
 
 /*POPUP*/
 #popup article {
   background-color: white;
-  width: 60%;
+  width: 90%;
 }
 
 #popup {
@@ -87,4 +100,34 @@ li {
   display: none;
 }
 
- 
+.bestil_rejse {
+  background-color: var(--blue);
+  color: white;
+  font-family: helvetica_light;
+  font-size: 0.7rem;
+  border-right: none;
+  padding-inline: var(--space-xs);
+  padding-block: 0.5rem;
+  border-radius: 5px;
+  margin-block: var(--space-xs);
+  place-self: center;
+}
+
+.bestil_rejse:hover {
+  background-color: var(--guld);
+  border-bottom: none;
+}
+
+/*----------DESKTOP----------*/
+
+@media (min-width: 800px) {
+  .filtre_buttons {
+    display: flex;
+    justify-content: end;
+    margin-right: var(--space-m);
+  }
+
+  .filteroverskrift {
+    display: flex;
+  }
+}
