--- a/destination.css
+++ b/destination.css
@@ -8,14 +8,14 @@ header {
   justify-content: end;
   margin-right: var(--space-s);
   margin-top: var(--space-m);
-  /* font-family: helvetica_bold; */
+  font-family: helvetica_bold;
   color: var(--orange);
 }
 
 nav ul li {
   margin-left: -4rem;
   text-decoration: none;
-  /* font-family: helvetica_bold; */
+  font-family: helvetica_bold;
   list-style-type: none;
   line-height: 1.5rem;
   color: var(--blue);
@@ -41,7 +41,7 @@ a:link {
 }
 button {
   color: var(--blue);
-  /* font-family: helvetica_medium; */
+  font-family: helvetica_medium;
   font-size: var(--space-xs);
 
   border: none;
@@ -90,7 +90,10 @@ img {
   border: 1.5px var(--guld) solid;
   margin-inline: 9rem;
 }
-
+article ul {
+  display: grid;
+  justify-content: center;
+}
 .pris {
   display: flex;
   justify-content: center;
@@ -139,7 +142,7 @@ img {
 .bestil_rejse {
   background-color: var(--blue);
   color: white;
-  /* font-family: helvetica_light; */
+  font-family: helvetica_light;
   font-size: 0.7rem;
   border-right: none;
   padding-inline: var(--space-xs);
