--- a/mutual.css
+++ b/mutual.css
@@ -12,7 +12,7 @@
   font-family: helvetica_bold; /*bruges til h2 og h3*/
   src: url(fonts/HelveticaNeueBd.ttf);
 }
-/* 
+
 p,
 h3,
 li {
@@ -21,7 +21,7 @@ li {
 
 h2 {
   font-family: helvetica_bold;
-} */
+}
 
 html {
   /* farve variabler */
