--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 }
 
 .splash {
-  background-image: url(splash3-kopi.png);
+  background-image: url(fotos/splash3-kopi.png);
   width: 100%;
   height: 100vh;
   background-size: cover;
