--- a/couples.css
+++ b/couples.css
@@ -26,15 +26,15 @@ nav ul li {
   .grid_1-1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 20px;
+    gap: 10px;
   }
   /* order så billedet kommer først i mobile version men sidst i web-version*/
   .order {
-    order: 2;
+    order: 1;
   }
 }
 h3 {
-  font-family: ;
+  font-family: helvetica_light;
   font-size: ;
   line-height: ;
   font-weight: ;
