--- a/mutual.css
+++ b/mutual.css
@@ -139,11 +139,11 @@ html {
 nav ul li a,
 nav ul li a:after,
 nav ul li a:before {
-  transition: all 0.3s;
+  transition: all 0.2s;
 }
 nav ul li a:hover {
-  color: rgb(255, 255, 255);
-  font-size: 1.1rem;
+  color: orange;
+  border-bottom: solid orange 1px;
 }
 
 /* INDEX LOGO */
