--- a/destination.css
+++ b/destination.css
@@ -1,30 +1,3 @@
-header {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-
-.sign_in {
-  display: flex;
-  justify-content: end;
-  margin-right: var(--space-s);
-  margin-top: var(--space-m);
-  font-family: helvetica_bold;
-  color: var(--orange);
-}
-
-nav ul li {
-  margin-left: -4rem;
-  text-decoration: none;
-  font-family: helvetica_bold;
-  list-style-type: none;
-  line-height: 1.5rem;
-  color: var(--blue);
-}
-
-a:link {
-  text-decoration: none;
-}
-
 .filtre_buttons {
   display: flex;
   justify-content: center;
@@ -72,6 +45,8 @@ article {
 h2 {
   display: flex;
   justify-content: center;
+  font-size: 20px;
+  margin-block: 10px;
 }
 
 .hotel,
@@ -86,6 +61,7 @@ img {
 .pakke {
   display: flex;
   justify-content: center;
+  margin-block: var(--space-xs);
 }
 
 .gold_line {
@@ -95,12 +71,15 @@ img {
 article ul {
   display: grid;
   justify-content: center;
+  margin-top: var(--space-xs);
+  line-height: var(--space-s);
 }
 .pris {
   display: flex;
   justify-content: center;
   margin-top: var(--space-s);
   font-weight: bolder;
+  margin-bottom: var(--space-xs);
 }
 
 /*POPUP*/
@@ -119,7 +98,7 @@ article ul {
   display: none;
   background-color: rgba(0, 0, 0, 0.449);
   overflow-y: scroll;
-  padding-top: var(--space-m);
+  padding-top: 10rem;
 }
 
 #popup article {
@@ -137,7 +116,7 @@ article .gold_line {
   grid-template-columns: repeat(12, 1fr);
   position: relative;
   padding-top: var(--space-xs);
-  padding-bottom: var(--space-xs);
+  padding-bottom: var(--space-s);
 }
 .popup_billede1 {
   max-width: 45%;
@@ -154,13 +133,18 @@ article .gold_line {
 }
 
 .popup_billede3 {
-  grid-column: 8/span 7;
+  grid-column: 8 / span 7;
   grid-row: 1;
-  max-width: 80%;
+  max-width: 40%;
   margin-top: var(--space-xs);
+}
+
+.info_tekst {
+  line-height: 22px;
 }
 .containerline {
   border: 1px solid rgb(190, 190, 190);
+  margin-block: var(--space-s);
 }
 
 #popup .pris {
@@ -196,6 +180,9 @@ article .gold_line {
 
   .filteroverskrift {
     display: flex;
+    margin-right: 55rem;
+    font-family: helvetica_bold;
+    color: var(--blue);
   }
 
   /*POPUP VINDUE*/
