--- a/mutual.css
+++ b/mutual.css
@@ -21,12 +21,15 @@
 }
 
 p,
-h3,
 li {
   font-family: helvetica_light;
 }
 
 h2 {
+  font-family: helvetica_bold;
+}
+
+h3 {
   font-family: helvetica_medium;
 }
 
