--- a/couples.css
+++ b/couples.css
@@ -40,14 +40,10 @@
     margin: auto;
   }
 }
-<<<<<<< HEAD .blå {
-  color: var(--blue);
-}
-.couples {
-  margin: 4rem;
-}
-
-=======>>>>>>>5acdbe0cec500e4662bbd9a6b884cf48d875fd2b p {
+p {
   margin-top: 1rem;
   margin-bottom: 3.5rem;
+}
+.blå {
+  color: var(--blue);
 }
